--- a/03帮助文档/操作手册/base-API/mstp_17_akira/l-AjaxTree.html
+++ b/03帮助文档/操作手册/base-API/mstp_17_akira/l-AjaxTree.html
@@ -11,17 +11,18 @@
 </head>
 
 <body>
-	<div  id="navbar" class="navbar" >
-			
-	</div>
+
 	<div class="container">
+		<div  id="navbar" class="navbar" >
+			
+		</div>
 		<div class="row">
 			<div id="navid" class="span3">
 				
 			</div>
 			<div class="span9">
 				<div class="h1">
-					<span>AjaxDataGrid</span>
+					<span>AjaxTree</span>
 				</div>
 				<div class="h2">
 					<span class="property">说明</span> <br />
