--- a/01SOURCE/vue/vuecomponent/index.html
+++ b/01SOURCE/vue/vuecomponent/index.html
@@ -6,7 +6,9 @@
     <title>vuecomponenttest</title>
   </head>
   <body>
-    <div id="app">123</div>
-    <!-- built files will be auto injected -->
+    <div id="app">
+      <Test></Test>
+    </div>
+    
   </body>
 </html>
