--- a/01SOURCE/vue/vuell/index.html
+++ b/01SOURCE/vue/vuell/index.html
@@ -13,30 +13,33 @@
   <div id="app">
     <!-- <vuetest></vuetest> -->
     <!-- <ll-table :data="tableData">
-      <el-table-column prop="date" label="日期" width="180">
-      </el-table-column>
-      <el-table-column prop="name" label="姓名" width="180">
-      </el-table-column>
-      <el-table-column prop="address" label="地址">
-      </el-table-column>
+      <ll-column prop="date" label="日期" :width="180">
+      </ll-column>
+      <ll-column prop="name" label="姓名" :width="180">
+      </ll-column>
+      <ll-column prop="address" label="地址" > 
+      </ll-column>
     </ll-table> -->
-    <ll-container :direction="horizontal">
+    <!-- <ll-container >
       <ll-aside>left</ll-aside>
       <ll-main>main</ll-main>
       <ll-aside>right</ll-aside>
-      <ll-aside>right</ll-aside>
-      <ll-aside>right</ll-aside>
+    </ll-container> -->
+    <!-- <ll-container >
+      <el-header>Header</el-header>
+      <el-main>Main</el-main>
+      <el-footer>Footer</el-footer>
+    </ll-container> -->
+    <ll-container >
+      <ll-header>Header</ll-header>
+      <ll-main>Main</ll-main>
+      <ll-footer>Footer</ll-footer>
     </ll-container>
-    <ll-container>
-        <ll-header>header</ll-header>
-        <ll-main>main</ll-main>
-        <ll-footer>footer</ll-footer>
-    </ll-container>
-    <el-container>
+    <!-- <el-container>
         <el-header>Header</el-header>
         <el-main>Main</el-main>
         <el-footer>Footer</el-footer>
-      </el-container>
+    </el-container> -->
   </div>
 
   <script type="text/javascript">
