--- a/01SOURCE/vue/vuell/index.html
+++ b/01SOURCE/vue/vuell/index.html
@@ -6,21 +6,68 @@
   <title>vueplugin2</title>
   <script src="./node_modules/vue/dist/vue.js"></script>
   <script src="/dist/vueplugins.js"></script>
-
+  <link href="./src/lib/css/base.css">
+  </link>
 </head>
 
 <body>
-  <div id="app">
-    <ll-container>
-      <ll-header>Header</ll-header>
+  <div id="app" style="height: 100%;width: 100%;">
+    <ll-container style="height: 100%; ">
+      <ll-header style="background-color:#eee;">Header</ll-header>
       <ll-container>
-        <ll-aside>
-          <ll-menu :items="items"></ll-menu>
+        <ll-aside width="200px">
+          <!-- <ll-nav-menu :items="items" style="height: 100%;width: 199px;" :collapse="true" background-color="#545c64" text-color="#fff"></ll-nav-menu> -->
+          <ll-radio-group v-model="isCollapse" style="margin-bottom: 20px;">
+            <ll-radio-button :label="false">展开</ll-radio-button>
+            <ll-radio-button :label="true">收起</ll-radio-button>
+          </ll-radio-group>
+          <ll-nav-menu :items="items" style="height: 100%;width: 199px;" :collapse="isCollapse" background-color="#545c64"
+            text-color="#fff"></ll-nav-menu>
+          <!-- <ll-menu default-active="1-4-1" class="el-menu-vertical-demo" 
+            :collapse="isCollapse">
+            <ll-submenu index="1">
+              <template slot="title">
+                <i class="el-icon-location"></i>
+                <span slot="title">导航一</span>
+              </template>
+              <ll-menu-item-group>
+                <span slot="title">分组一</span>
+                <ll-menu-item index="1-1">选项1</ll-menu-item>
+                <ll-menu-item index="1-2">选项2</ll-menu-item>
+              </ll-menu-item-group>
+              <ll-menu-item-group title="分组2">
+                <ll-menu-item index="1-3">选项3</ll-menu-item>
+              </ll-menu-item-group>
+              <ll-submenu index="1-4">
+                <span slot="title">选项4</span>
+                <ll-menu-item index="1-4-1">选项1</ll-menu-item>
+              </ll-submenu>
+            </ll-submenu>
+            <ll-menu-item index="2">
+              <i class="el-icon-menu"></i>
+              <span slot="title">导航二</span>
+            </ll-menu-item>
+            <ll-menu-item index="3" disabled>
+              <i class="el-icon-document"></i>
+              <span slot="title">导航三</span>
+            </ll-menu-item>
+            <ll-menu-item index="4">
+              <i class="el-icon-setting"></i>
+              <span slot="title">导航四</span>
+            </ll-menu-item>
+          </ll-menu> -->
         </ll-aside>
-        <ll-main>
-          <ll-tabs :activeName="activeName">
-              <ll-tab-pane label="消息中心">消息中心</ll-tab-pane>
-            <ll-tab-pane label="表格" name="bg">
+        <ll-main style="padding: 0 0 0 0px;">
+          <ll-tabs v-model="activeTab" type="card" class="ll-tabs" @edit="handleTabsEdit">
+            <ll-tab-pane :key="item.name" v-for="(item, index) in tabs" :label="item.title" :name="item.name" :closable="item.closable==null?false:item.closable"
+              style="height: 100%;overflow: hidden;">
+              <iframe style="height: 100%;width: 100%;" frameborder='0' th:src="@{/sys/index/main}"></iframe>
+              <!-- {{item.title}} -->
+            </ll-tab-pane>
+          </ll-tabs>
+          <!-- <ll-tabs v-model="editableTabsValue2" :activeName="activeName" type="card" class="ll-tabs" closable @tab-remove="removeTab">
+            <ll-tab-pane label="消息中心" >消息中心</ll-tab-pane>
+            <ll-tab-pane label="表格" closable >
               <ll-table :data="tableData">
                 <ll-table-column prop="date" label="日期" :width="180">
                 </ll-table-column>
@@ -28,21 +75,66 @@
                 </ll-table-column>
                 <ll-table-column prop="address" label="地址">
                 </ll-table-column>
-              </ll-table> 
-              用户管理
+              </ll-table>
             </ll-tab-pane>
-          </ll-tabs>
+          </ll-tabs> -->
         </ll-main>
       </ll-container>
-      <ll-footer height="100px">Footer</ll-footer>
+      <ll-footer style="height: 25px;">997820126@qq.com</ll-footer>
     </ll-container>
   </div>
 
   <script type="text/javascript">
+   
     new Vue({
       el: '#app',
+      methods: {
+        handleOpen(key, keyPath) {
+          console.log(key, keyPath);
+        },
+        handleClose(key, keyPath) {
+          console.log(key, keyPath);
+        },
+        handleTabsEdit(targetName, action) {
+          if (action === 'add') {
+            let newTabName = ++this.tabIndex + '';
+            this.editableTabs.push({
+              title: 'New Tab',
+              name: newTabName,
+              content: 'New Tab content'
+            });
+            this.activeTab = newTabName;
+          }
+          if (action === 'remove') {
+            let tabs = this.tabs;
+            let activeName = this.activeTab;
+            if (activeName === targetName) {
+              tabs.forEach((tab, index) => {
+                if (tab.name === targetName) {
+                  let nextTab = tabs[index + 1] || tabs[index - 1];
+                  if (nextTab) {
+                    activeName = nextTab.name;
+                  }
+                }
+              });
+            }
+
+            this.activeTab = activeName;
+            this.tabs = tabs.filter(tab => tab.name !== targetName);
+          }
+        }
+      },
       data: {
-        activeName:"bg",
+        activeTab: "首页",
+        isCollapse: true,
+        tabs: [{
+          name: "首页",
+          title: "首页",
+        }, {
+          name: "菜单管理",
+          title: "菜单管理",
+          closable: true
+        }],
         tableData: [{
             date: "2016-05-02",
             name: "王小虎1",
@@ -62,23 +154,372 @@
             date: "2016-05-03",
             name: "王小虎",
             address: "上海市普陀区金沙江路 1516 弄"
+          },
+          {
+            date: "2016-05-04",
+            name: "王小虎",
+            address: "上海市普陀区金沙江路 1517 弄"
+          },
+          {
+            date: "2016-05-01",
+            name: "王小虎",
+            address: "上海市普陀区金沙江路 1519 弄"
+          },
+          {
+            date: "2016-05-03",
+            name: "王小虎",
+            address: "上海市普陀区金沙江路 1516 弄"
+          },
+          {
+            date: "2016-05-04",
+            name: "王小虎",
+            address: "上海市普陀区金沙江路 1517 弄"
+          },
+          {
+            date: "2016-05-01",
+            name: "王小虎",
+            address: "上海市普陀区金沙江路 1519 弄"
+          },
+          {
+            date: "2016-05-03",
+            name: "王小虎",
+            address: "上海市普陀区金沙江路 1516 弄"
+          },
+          {
+            date: "2016-05-04",
+            name: "王小虎",
+            address: "上海市普陀区金沙江路 1517 弄"
+          },
+          {
+            date: "2016-05-01",
+            name: "王小虎",
+            address: "上海市普陀区金沙江路 1519 弄"
+          },
+          {
+            date: "2016-05-03",
+            name: "王小虎",
+            address: "上海市普陀区金沙江路 1516 弄"
+          },
+          {
+            date: "2016-05-04",
+            name: "王小虎",
+            address: "上海市普陀区金沙江路 1517 弄"
+          },
+          {
+            date: "2016-05-01",
+            name: "王小虎",
+            address: "上海市普陀区金沙江路 1519 弄"
+          },
+          {
+            date: "2016-05-03",
+            name: "王小虎",
+            address: "上海市普陀区金沙江路 1516 弄"
+          },
+          {
+            date: "2016-05-04",
+            name: "王小虎",
+            address: "上海市普陀区金沙江路 1517 弄"
+          },
+          {
+            date: "2016-05-01",
+            name: "王小虎",
+            address: "上海市普陀区金沙江路 1519 弄"
+          },
+          {
+            date: "2016-05-03",
+            name: "王小虎",
+            address: "上海市普陀区金沙江路 1516 弄"
+          },
+          {
+            date: "2016-05-04",
+            name: "王小虎",
+            address: "上海市普陀区金沙江路 1517 弄"
+          },
+          {
+            date: "2016-05-01",
+            name: "王小虎",
+            address: "上海市普陀区金沙江路 1519 弄"
+          },
+          {
+            date: "2016-05-03",
+            name: "王小虎",
+            address: "上海市普陀区金沙江路 1516 弄"
+          },
+          {
+            date: "2016-05-04",
+            name: "王小虎",
+            address: "上海市普陀区金沙江路 1517 弄"
+          },
+          {
+            date: "2016-05-01",
+            name: "王小虎",
+            address: "上海市普陀区金沙江路 1519 弄"
+          },
+          {
+            date: "2016-05-03",
+            name: "王小虎",
+            address: "上海市普陀区金沙江路 1516 弄"
+          },
+          {
+            date: "2016-05-04",
+            name: "王小虎",
+            address: "上海市普陀区金沙江路 1517 弄"
+          },
+          {
+            date: "2016-05-01",
+            name: "王小虎",
+            address: "上海市普陀区金沙江路 1519 弄"
+          },
+          {
+            date: "2016-05-03",
+            name: "王小虎",
+            address: "上海市普陀区金沙江路 1516 弄"
+          },
+          {
+            date: "2016-05-04",
+            name: "王小虎",
+            address: "上海市普陀区金沙江路 1517 弄"
+          },
+          {
+            date: "2016-05-01",
+            name: "王小虎",
+            address: "上海市普陀区金沙江路 1519 弄"
+          },
+          {
+            date: "2016-05-03",
+            name: "王小虎",
+            address: "上海市普陀区金沙江路 1516 弄"
+          },
+          {
+            date: "2016-05-04",
+            name: "王小虎",
+            address: "上海市普陀区金沙江路 1517 弄"
+          },
+          {
+            date: "2016-05-01",
+            name: "王小虎",
+            address: "上海市普陀区金沙江路 1519 弄"
+          },
+          {
+            date: "2016-05-03",
+            name: "王小虎",
+            address: "上海市普陀区金沙江路 1516 弄"
+          },
+          {
+            date: "2016-05-04",
+            name: "王小虎",
+            address: "上海市普陀区金沙江路 1517 弄"
+          },
+          {
+            date: "2016-05-01",
+            name: "王小虎",
+            address: "上海市普陀区金沙江路 1519 弄"
+          },
+          {
+            date: "2016-05-03",
+            name: "王小虎",
+            address: "上海市普陀区金沙江路 1516 弄"
+          },
+          {
+            date: "2016-05-04",
+            name: "王小虎",
+            address: "上海市普陀区金沙江路 1517 弄"
+          },
+          {
+            date: "2016-05-01",
+            name: "王小虎",
+            address: "上海市普陀区金沙江路 1519 弄"
+          },
+          {
+            date: "2016-05-03",
+            name: "王小虎",
+            address: "上海市普陀区金沙江路 1516 弄"
+          },
+          {
+            date: "2016-05-04",
+            name: "王小虎",
+            address: "上海市普陀区金沙江路 1517 弄"
+          },
+          {
+            date: "2016-05-01",
+            name: "王小虎",
+            address: "上海市普陀区金沙江路 1519 弄"
+          },
+          {
+            date: "2016-05-03",
+            name: "王小虎",
+            address: "上海市普陀区金沙江路 1516 弄"
+          },
+          {
+            date: "2016-05-04",
+            name: "王小虎",
+            address: "上海市普陀区金沙江路 1517 弄"
+          },
+          {
+            date: "2016-05-01",
+            name: "王小虎",
+            address: "上海市普陀区金沙江路 1519 弄"
+          },
+          {
+            date: "2016-05-03",
+            name: "王小虎",
+            address: "上海市普陀区金沙江路 1516 弄"
+          },
+          {
+            date: "2016-05-04",
+            name: "王小虎",
+            address: "上海市普陀区金沙江路 1517 弄"
+          },
+          {
+            date: "2016-05-01",
+            name: "王小虎",
+            address: "上海市普陀区金沙江路 1519 弄"
+          },
+          {
+            date: "2016-05-03",
+            name: "王小虎",
+            address: "上海市普陀区金沙江路 1516 弄"
+          },
+          {
+            date: "2016-05-04",
+            name: "王小虎",
+            address: "上海市普陀区金沙江路 1517 弄"
+          },
+          {
+            date: "2016-05-01",
+            name: "王小虎",
+            address: "上海市普陀区金沙江路 1519 弄"
+          },
+          {
+            date: "2016-05-03",
+            name: "王小虎",
+            address: "上海市普陀区金沙江路 1516 弄"
+          },
+          {
+            date: "2016-05-04",
+            name: "王小虎",
+            address: "上海市普陀区金沙江路 1517 弄"
+          },
+          {
+            date: "2016-05-01",
+            name: "王小虎",
+            address: "上海市普陀区金沙江路 1519 弄"
+          },
+          {
+            date: "2016-05-03",
+            name: "王小虎",
+            address: "上海市普陀区金沙江路 1516 弄"
+          },
+          {
+            date: "2016-05-04",
+            name: "王小虎",
+            address: "上海市普陀区金沙江路 1517 弄"
+          },
+          {
+            date: "2016-05-01",
+            name: "王小虎",
+            address: "上海市普陀区金沙江路 1519 弄"
+          },
+          {
+            date: "2016-05-03",
+            name: "王小虎",
+            address: "上海市普陀区金沙江路 1516 弄"
+          },
+          {
+            date: "2016-05-04",
+            name: "王小虎",
+            address: "上海市普陀区金沙江路 1517 弄"
+          },
+          {
+            date: "2016-05-01",
+            name: "王小虎",
+            address: "上海市普陀区金沙江路 1519 弄"
+          },
+          {
+            date: "2016-05-03",
+            name: "王小虎",
+            address: "上海市普陀区金沙江路 1516 弄"
+          },
+          {
+            date: "2016-05-04",
+            name: "王小虎",
+            address: "上海市普陀区金沙江路 1517 弄"
+          },
+          {
+            date: "2016-05-01",
+            name: "王小虎",
+            address: "上海市普陀区金沙江路 1519 弄"
+          },
+          {
+            date: "2016-05-03",
+            name: "王小虎",
+            address: "上海市普陀区金沙江路 1516 弄"
+          },
+          {
+            date: "2016-05-04",
+            name: "王小虎",
+            address: "上海市普陀区金沙江路 1517 弄"
+          },
+          {
+            date: "2016-05-01",
+            name: "王小虎",
+            address: "上海市普陀区金沙江路 1519 弄"
+          },
+          {
+            date: "2016-05-03",
+            name: "王小虎",
+            address: "上海市普陀区金沙江路 1516 弄"
+          },
+          {
+            date: "2016-05-04",
+            name: "王小虎",
+            address: "上海市普陀区金沙江路 1517 弄"
+          },
+          {
+            date: "2016-05-01",
+            name: "王小虎",
+            address: "上海市普陀区金沙江路 1519 弄"
+          },
+          {
+            date: "2016-05-03",
+            name: "王小虎",
+            address: "上海市普陀区金沙江路 1516 弄"
+          },
+          {
+            date: "2016-05-04",
+            name: "王小虎",
+            address: "上海市普陀区金沙江路 1517 弄"
+          },
+          {
+            date: "2016-05-01",
+            name: "王小虎",
+            address: "上海市普陀区金沙江路 1519 弄"
+          },
+          {
+            date: "2016-05-03",
+            name: "王小虎",
+            address: "上海市普陀区金沙江路 1516 弄"
           }
         ],
         items: [{
           value: "1",
-          label: "1",
+          label: "系统管理",
+          icon: "el-icon-menu",
           children: [{
             value: "1-1",
-            label: "1-1",
+            label: "菜单维护",
+            icon: "el-icon-document",
             children: [{
               value: "1-1-1",
-              label: "1-1-1",
+              label: "菜单查询",
+              icon: "el-icon-setting",
               children: []
             }]
           }]
         }, {
           value: "2",
-          label: "2",
+          label: "工作单管理",
+          icon: "el-icon-document",
           children: []
         }]
       },
