--- a/01SOURCE/vue/vuell/index.html
+++ b/01SOURCE/vue/vuell/index.html
@@ -16,38 +16,16 @@
       <ll-header style="background-color:#eee;">Header</ll-header>
       <ll-container>
         <ll-aside width="200px" style="background-color:#545c64">
-          <ll-nav-menu :items="items" @select="menuSelect" :id-alias="idAlias" :labe-alias="labelAlias" child-alias="children" style="width: 200px;" mode="horizontal" background-color="#545c64"
+          <ll-nav-menu :items="items" @select="menuSelect" :props="menuProp" style="width: 200px;" mode="horizontal" background-color="#545c64"
             text-color="#fff"></ll-nav-menu>
         </ll-aside>
         <ll-main style="padding: 0 0 0 0px;">
           <ll-tabs v-model="activeTab" type="card" class="ll-tabs" @edit="handleTabsEdit">
             <ll-tab-pane :key="item.name" v-for="(item, index) in tabs" :label="item.title" :name="item.name" :closable="item.closable==null?false:item.closable"
               style="height: 100%;overflow: auto;">
-                <iframe v-if="index==0" style="height: 100%;width: 100%;display:block" src="./templates/index.1.html" frameborder='0' th:src="@{/sys/index/main}"></iframe>
-                <ll-table v-else-if="index==1" :data="tableData">
-                  <ll-table-column prop="date" label="日期" :width="180">
-                  </ll-table-column>
-                  <ll-table-column prop="name" label="姓名" :width="180">
-                  </ll-table-column>
-                  <ll-table-column prop="address" label="地址">
-                  </ll-table-column>
-                </ll-table>
-                <iframe v-else style="height: 100%;width: 100%;display:block" src="./templates/index.1.html" frameborder='0' th:src="@{/sys/index/main}"></iframe>
+                <iframe style="height: 100%;width: 100%;display:block" :src="item.link" frameborder='0' th:src="@{/sys/index/main}"></iframe>
             </ll-tab-pane>
           </ll-tabs>
-          <!-- <ll-tabs v-model="editableTabsValue2" :activeName="activeName" type="card" class="ll-tabs" closable @tab-remove="removeTab">
-            <ll-tab-pane label="消息中心" >消息中心</ll-tab-pane>
-            <ll-tab-pane label="表格" closable >
-              <ll-table :data="tableData">
-                <ll-table-column prop="date" label="日期" :width="180">
-                </ll-table-column>
-                <ll-table-column prop="name" label="姓名" :width="180">
-                </ll-table-column>
-                <ll-table-column prop="address" label="地址">
-                </ll-table-column>
-              </ll-table>
-            </ll-tab-pane>
-          </ll-tabs> -->
         </ll-main>
       </ll-container>
       <ll-footer style="height: 25px;">997820126@qq.com</ll-footer>
@@ -102,39 +80,24 @@
         }
       },
       data: {
-        activeTab: "首页",
+        activeTab: "表格测试",
         isCollapse: true,
         tabs: [{
-          name: "首页",
-          title: "首页",
-        }, {
-          name: "菜单管理",
-          title: "菜单管理",
-          closable: true
+          name: "表格测试",
+          title: "表格测试",
+          link:"./templates/testTable.html"
+        },
+        {
+          name: "树测试",
+          title: "树测试",
+          link:"./templates/testTree.html"
         }],
-        tableData: [{
-            date: "2016-05-02",
-            name: "王小虎1",
-            address: "上海市普陀区金沙江路 1518 弄"
-          },
-          {
-            date: "2016-05-01",
-            name: "王小虎",
-            address: "上海市普陀区金沙江路 1519 弄"
-          },
-          {
-            date: "2016-05-03",
-            name: "王小虎",
-            address: "上海市普陀区金沙江路 1516 弄"
-          },
-          {
-            date: "2016-05-04",
-            name: "王小虎",
-            address: "上海市普陀区金沙江路 1517 弄"
-          },
-        ],
-        idAlias:"value",
-        labelAlias:"label",
+        menuProp:{
+          idAlias:"value",
+          labelAlias:"label",
+          childAlias:"children"
+        },
+          
         items: [{
           value: "1",
           label: "系统管理",
