--- a/01SOURCE/vue/vuell/index.html
+++ b/01SOURCE/vue/vuell/index.html
@@ -92,9 +92,9 @@
           link:"./templates/testTree.html"
         }],
         menuProp:{
-          idAlias:"value",
-          labelAlias:"label",
-          childAlias:"children"
+          id:"value",
+          label:"label",
+          children:"children"
         },
           
         items: [{
