--- a/01SOURCE/vue/vuell/index.html
+++ b/01SOURCE/vue/vuell/index.html
@@ -90,6 +90,11 @@
           name: "树测试",
           title: "树测试",
           link:"./templates/testTree.html"
+        },
+        {
+          name: "表单测试",
+          title: "表单测试",
+          link:"./templates/testForm.html"
         }],
         menuProp:{
           id:"value",
