--- a/01SOURCE/vue/vuell/index.html
+++ b/01SOURCE/vue/vuell/index.html
@@ -84,17 +84,17 @@
         tabs: [{
           name: "表格测试",
           title: "表格测试",
-          link:"./templates/testTable.html"
+          link:"./src/templates/testTable.html"
         },
         {
           name: "树测试",
           title: "树测试",
-          link:"./templates/testTree.html"
+          link:"./src/templates/testTree.html"
         },
         {
           name: "表单测试",
           title: "表单测试",
-          link:"./templates/testForm.html"
+          link:"./src/templates/testForm.html"
         }],
         menuProp:{
           id:"value",
