--- a/01SOURCE/vue/vuetest/day01Test01.html
+++ b/01SOURCE/vue/vuetest/day01Test01.html
@@ -100,7 +100,8 @@
                 reverseMessage: function () {
                     this.message = this.message.split('').reverse().join('')
                 }
-            }
+            },
+            beforeCreated(){}
         })
         var app6 = new Vue({
             el: '#app-6',
