--- a/01SOURCE/vue/vuell/index.html
+++ b/01SOURCE/vue/vuell/index.html
@@ -6,7 +6,7 @@
   <title>vueplugin2</title>
   <script src="./node_modules/vue/dist/vue.js"></script>
   <script src="/dist/vueplugins.js"></script>
-  <link href="./src/lib/css/base.css">
+  <!-- <link href="./src/lib/css/base.css"> -->
   </link>
 </head>
 
@@ -99,7 +99,8 @@
         menuProp:{
           id:"value",
           label:"label",
-          children:"children"
+          children:"children",
+          icon:"icon"
         },
           
         items: [{
