--- a/01SOURCE/vue/vuell/index.html
+++ b/01SOURCE/vue/vuell/index.html
@@ -95,6 +95,11 @@
           name: "表单测试",
           title: "表单测试",
           link:"./src/templates/testForm.html"
+        },
+        {
+          name: "折叠面板测试",
+          title: "折叠面板测试",
+          link:"./src/templates/testCollapse.html"
         }],
         menuProp:{
           id:"value",
