--- a/01SOURCE/vue/vuell/index.html
+++ b/01SOURCE/vue/vuell/index.html
@@ -13,11 +13,17 @@
 <body>
   <div id="app" style="height: 100%;width: 100%;">
     <ll-container style="height: 100%; ">
-      <ll-header style="background-color:#eee;">Header</ll-header>
+      <ll-header style="background-color:#eee;">
+        <ll-radio-group v-model="isCollapse" style="margin-bottom: 20px;">
+          <ll-radio-button :label="false">展开</ll-radio-button>
+          <ll-radio-button :label="true">收起</ll-radio-button>
+        </ll-radio-group>
+      </ll-header>
       <ll-container>
-        <ll-aside width="200px" style="background-color:#272b2e">
-          <ll-nav-menu :items="items" @select="menuSelect" :props="menuProp" style="width: 200px;"  background-color="#272b2e"
-            text-color="#fff"></ll-nav-menu>
+        <ll-aside :width="style.asideWidth" style="background-color:#272b2e">
+          
+          <ll-menu-zz :items="items" @select="menuSelect" :collapse="isCollapse" :props="menuProp" :style="{width: style.asideWidth}"  background-color="#272b2e"
+            mode="vertical" text-color="#fff"></ll-menu-zz>
         </ll-aside>
         <ll-main style="padding: 0 0 0 0px;">
           <ll-tabs v-model="activeTab" type="card" class="ll-tabs" @edit="handleTabsEdit">
@@ -80,7 +86,7 @@
       },
       data: {
         activeTab: "表格测试",
-        isCollapse: true,
+        isCollapse: false,
         tabs: [{
           name: "表格测试",
           title: "表格测试",
@@ -100,6 +106,16 @@
           name: "折叠面板测试",
           title: "折叠面板测试",
           link:"./src/templates/testCollapse.html"
+        },
+        {
+          name: "级联下拉弹窗",
+          title: "级联下拉弹窗测试",
+          link:"./src/templates/testCascader.html"
+        },
+        {
+          name: "下拉树",
+          title: "下拉树测试",
+          link:"./src/templates/testDropTree.html"
         }],
         menuProp:{
           id:"value",
@@ -135,8 +151,21 @@
           label: "工作单管理",
           icon: "el-icon-document",
           children: []
-        }]
+        }],
+        style:{
+          asideWidth:"200px"
+        }
       },
+      watch:{
+        isCollapse(newVal, oldVal){
+          if(newVal){
+            this.style.asideWidth="0px";
+          }
+          else{
+            this.style.asideWidth="200px";
+          }
+        }
+      }
     })
   </script>
 </body>
